Adjusting response sells