@@ -2,16 +2,19 @@ package com.supermarketSouza.SupermarketSouza.service;
 
 import com.supermarketSouza.SupermarketSouza.mapper.ProductMapper;
 import com.supermarketSouza.SupermarketSouza.model.ProductBoughtModel;
-import com.supermarketSouza.SupermarketSouza.repositories.custom.ProductBoughtCustomRepository;
+import com.supermarketSouza.SupermarketSouza.model.ProductSoldModel;
+import com.supermarketSouza.SupermarketSouza.repositories.custom.ProductBoughtCustomRepositoryImpl;
 import com.supermarketSouza.SupermarketSouza.repositories.ProductBoughtRepository;
 import com.supermarketSouza.SupermarketSouza.repositories.ProductSoldRepository;
 import com.supermarketSouza.SupermarketSouza.repositories.ProductStorageRepository;
 import com.supermarketSouza.SupermarketSouza.request.ProductBoughtDTO;
 import com.supermarketSouza.SupermarketSouza.request.ProductSellDTO;
+import jakarta.persistence.NoResultException;
 import jakarta.transaction.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.BeanUtils;
@@ -25,12 +28,13 @@ public class ProductService {
   final ProductStorageRepository productStorageRepository;
   final ProductMapper productMapper;
   final ProductSoldRepository productSoldRepository;
-  final ProductBoughtCustomRepository productBoughtCustomRepository;
+  final ProductBoughtCustomRepositoryImpl productBoughtCustomRepositoryImpl;
 
   @Transactional
   public List<ProductBoughtModel> saveProduct(List<ProductBoughtDTO> request) {
 
-    return request.stream()
+    var productBoughtList =
+        request.stream()
         .map(productBought -> {
           productBought.setNameProduct(productBought.getNameProduct().toUpperCase());
 
@@ -41,31 +45,37 @@ public class ProductService {
           var storage = productStorageRepository.findByCodeProduct(productBoughtModel.getCodeProduct());
           storage.ifPresent(productStorageModel -> productBoughtModel.setProductQuantityBought(
               productStorageModel.getProductQuantity() + productBoughtModel.getProductQuantityBought()));
-
-          productStorageRepository.save(productMapper.toEntityProductStorage(productBoughtModel));
-          productBoughtModel.setProductQuantityBought(productBought.getProductQuantityBought());
-          return productBoughtRepository.save(productBoughtModel);
+          return productBoughtModel;
         })
-        .collect(Collectors.toList());
+        .toList();
+    productStorageRepository.saveAll(productMapper.toEntityProductStorage(productBoughtList));
+    return productBoughtRepository.saveAll(productBoughtList);
+
   }
 
-  public BigDecimal saveProductSold(List<ProductSellDTO> productSellDTO) {
-    return productSellDTO.stream()
-        .map(productSold -> productStorageRepository.findByCodeProduct(productSold.getCodeProduct())
-            .map(productStorageModel ->{
-              var purchaseItems = productBoughtCustomRepository.findLatestProductBought(productSold.getCodeProduct());
-              productSoldRepository.save(productMapper.toEntityProductSold(productStorageModel, productSold, purchaseItems));
-              purchaseItems.setProductQuantityBought(productStorageModel.getProductQuantity() - productSold.getProductQuantitySold());
-              productStorageRepository.save(productMapper.toEntityProductStorage(purchaseItems));
-              return purchaseItems.getPriceProductToSell().multiply(BigDecimal.valueOf(productSold.getProductQuantitySold()));
-            })
-            .orElse(BigDecimal.ZERO))
-        .reduce(BigDecimal.ZERO,BigDecimal::add);
+  public List<ProductSoldModel> saveProductSold(List<ProductSellDTO> productSellDTO) {
+   var productSoldOptional = productSellDTO.stream().map(
+           productSell -> productStorageRepository.findByCodeProduct(productSell.getCodeProduct())
+           .map(productSold -> {
+             productSold.setProductQuantity(productSold.getProductQuantity() - productSell.getProductQuantitySold());
+             var storage = productStorageRepository.save(productSold);
+             var price = getPrice(storage.getCodeProduct());
+             return productMapper.toEntityProductSold(productSold, productSell, price);
+           }))
+             .collect(Collectors.toList());
+    return productSoldRepository.saveAll(toList(productSoldOptional));
   }
 
-  public Object getPrice(String codeProduct) {
-   return productBoughtCustomRepository.findLatestProductBought(codeProduct).getPriceProductToSell();
+  public BigDecimal getPrice(String codeProduct) {
+    try{
+      return productBoughtCustomRepositoryImpl.findLatestProductBought(codeProduct).getPriceProductToSell();
+    }catch (NoResultException e){
+      throw new NoResultException("");
+    }
   }
 
+  private List<ProductSoldModel> toList(List<Optional<ProductSoldModel>> productSellList) {
+    return productSellList.stream().map(productSoldModel -> productSoldModel.orElse(null)).collect(Collectors.toList());
+  }
 
 }
